@@ -1,0 +1,2 @@
+/* Define to `int' if <sys/types.h> doesn't define.  */
+#undef register_t
