@@ -23,7 +23,7 @@ INCLUDES = -I$(top_srcdir)/include
 liblwp_la_SOURCES = fasttime.c iomgr.c lock.c lwp.c timer.c process.S \
     lwp.private.h
 liblwp_la_CFLAGS = -DLWP_DEBUG
-liblwp_la_LDFLAGS = -version-info 1:0:0 $(LIBTOOL_LDFLAGS)
+liblwp_la_LDFLAGS = -version-info 2:0:0 $(LIBTOOL_LDFLAGS)
 
 noinst_PROGRAMS = cswitch testlwp testlwp-static tdb rw
 LDADD = liblwp.la
