@@ -51,7 +51,7 @@ int main(int argc, char **argv)
     last_context_switch.tv_usec = 0;
 
     assert(LWP_Init(LWP_VERSION, 0, &pid) == LWP_SUCCESS);
-    assert(LWP_CreateProcess((PFI)OtherProcess, 4096, 0, (char *)pid, c, &otherpid) == LWP_SUCCESS);
+    assert(LWP_CreateProcess((PFI)OtherProcess, 16384, 0, (char *)pid, c, &otherpid) == LWP_SUCCESS);
     assert(IOMGR_Initialize() == LWP_SUCCESS);
     gettimeofday(&t1, NULL);
 
